chore: add format use of const, variables and functions on JS

--- a/index.html
+++ b/index.html
@@ -18,16 +18,17 @@
     </header>
 
     <main>
+      <h1>Page Title</h1>
       <article>
-        <h1>Title 1</h1>
-        <h2>Subtitle 1</h2>
+        <h2>Title 1</h2>
+        <h3>Subtitle 1</h3>
         <img src="images/example.jpg" />
         <p>Paragraph 1</p>
       </article>
 
       <article>
-        <h1>Title 2</h1>
-        <h2>Subtitle 2</h2>
+        <h2>Title 2</h2>
+        <h3>Subtitle 2</h3>
         <img src="images/example.jpg" />
         <p>Paragraph 2</p>
       </article>
@@ -36,3 +37,14 @@
     <footer>Here we have footer</footer>
   </body>
 </html>
+
+<!-- 2. Adding external JS file and using const -->
+<script lang="javascript" src="js/first-file.js"></script>
+
+<script lang="javascript">
+  // 1. First Run
+  // alert('This is the first JavaScript running!')
+
+  // 3. Variables and functions
+  showAlert()
+</script>
