chore: showing the addition operator

--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@
         <img src="images/example.jpg" />
         <p>Paragraph 2</p>
       </article>
+
+      <div class="sum">
+        <button onclick="sum(5,10)">Executar soma de valores</button>
+        <div id="sum_result"></div>
+      </div>
     </main>
 
     <footer>Here we have footer</footer>
@@ -46,5 +51,5 @@
   // alert('This is the first JavaScript running!')
 
   // 3. Variables and functions
-  showAlert()
+  // showAlert()
 </script>
